--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "typingtest",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "build": "npx tailwindcss -i src/input.css -o public/output.css --watch",
@@ -12,5 +11,6 @@
   "license": "ISC",
   "devDependencies": {
     "tailwindcss": "^3.3.3"
-  }
+  },
+  "description": ""
 }
